--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -13,7 +13,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/roboto-v30-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/roboto-v30-cyrillic_latin-regular.woff") format("woff");
+  src: url("../fonts/roboto-regular.woff2") format("woff2"), url("../fonts/roboto-regular.woff") format("woff");
 }
 
 @font-face {
@@ -39,4 +39,12 @@
   font-style: normal;
   font-weight: 400;
   src: url("../fonts/open-sans-v36-cyrillic_latin-regular.woff2") format("woff2"), url("../fonts/open-sans-v36-cyrillic_latin-regular.woff") format("woff");
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Open Sans";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/open-sans-v36-cyrillic_latin-700.woff2") format("woff2"), url("../fonts/open-sans-v36-cyrillic_latin-700.woff") format("woff");
 }
