--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,6 +17,10 @@
 // ---------------------------------
 
 @import "blocks/btn";
+@import "blocks/main-header";
+@import "blocks/rooms";
+@import "blocks/room";
+@import "blocks/motivation";
 
 // ---------------------------------
 
