--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -5,6 +5,8 @@ $color-wild-watermelon:             #ff4b77;
 $color-crimson:                     #d8003f;
 $color-vulcan:                      #3c3e43;
 $color-coral:                       #ff7647;
+$color-st-tropaz:                   #2d507c;
+$color-nobel:                       #999999;
 
 // Default
 
