--- a/css/style.css
+++ b/css/style.css
@@ -723,9 +723,9 @@ button,
   content: "";
   position: fixed;
   top: 0;
-  bottom: 0;
   left: 0;
   right: 0;
+  height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay.svg") no-repeat center/cover;
   background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay.svg") no-repeat center/cover;
   z-index: -1;
