--- a/css/style.css
+++ b/css/style.css
@@ -965,7 +965,7 @@ button,
   -ms-flex-pack: center;
   justify-content: center;
   text-align: center;
-  background-color: #010202;
+  background-color: #3c3e43;
   border-radius: 0 0 12px 12px;
   position: absolute;
   bottom: 0;
