--- a/css/style.css
+++ b/css/style.css
@@ -762,8 +762,8 @@ button,
   padding-bottom: 22px;
   border-radius: 12px;
   overflow: hidden;
-  -webkit-clip-path: polygon(0);
-  clip-path: polygon(0);
+  -webkit-clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
+  clip-path: polygon(0 0, 0 100%, 100% 100%, 100% 0);
   position: relative;
 }
 
@@ -1010,6 +1010,7 @@ button,
   bottom: 0;
   z-index: -1;
   background-color: #2d507c;
+  border-radius: 12px;
 }
 
 .room__image-wrapper::after {
@@ -1021,6 +1022,7 @@ button,
   bottom: 0;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(10, 34, 64, 0.1)), to(#0a2240));
   background-image: linear-gradient(180deg, rgba(10, 34, 64, 0.1) 0%, #0a2240 100%);
+  border-radius: 12px;
 }
 
 .room__image-wrapper img {
@@ -1028,6 +1030,7 @@ button,
   object-fit: cover;
   height: 100%;
   width: 100%;
+  border-radius: 12px;
 }
 
 .motivation {
