--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -3,6 +3,8 @@
 $color-razzmatazz:                  #f91155;
 $color-wild-watermelon:             #ff4b77;
 $color-crimson:                     #d8003f;
+$color-illusion:                    #ff97b0;
+$color-brink-pink:                  #f9637c;
 $color-vulcan:                      #3c3e43;
 $color-coral:                       #ff7647;
 $color-st-tropaz:                   #2d507c;
