--- a/source/sass/blocks/rooms.scss
+++ b/source/sass/blocks/rooms.scss
@@ -5,11 +5,19 @@
     content: "";
     position: fixed;
     top: 0;
-    bottom: 0;
     left: 0;
     right: 0;
-    background: $color-linear-gradient, url("../img/svg/background-overlay.svg") no-repeat center / cover;
+    height: 100vh;
+    background: $color-linear-gradient, url("../img/svg/background-overlay.svg") no-repeat 53.5% 50% / cover;
     z-index: -1;
+
+    @include vp-1279 {
+      background: $color-linear-gradient, url("../img/svg/background-overlay-tablet.svg") no-repeat center / cover;
+    }
+
+    @include vp-767 {
+      background: $color-linear-gradient, url("../img/svg/background-overlay-mobile.svg") no-repeat center / cover;
+    }
   }
 }
 
