--- a/css/style.css
+++ b/css/style.css
@@ -595,9 +595,6 @@ button,
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay.svg") no-repeat 53.5% 50%/cover;
-  background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay.svg") no-repeat 53.5% 50%/cover;
-  background-attachment: fixed;
 }
 
 .wrapper--centred main {
@@ -713,6 +710,9 @@ button,
   left: 0;
   right: 0;
   height: 100vh;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay.svg") no-repeat 53.5% 50%/cover;
+  background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay.svg") no-repeat 53.5% 50%/cover;
+  z-index: -1;
 }
 
 .rooms__list {
@@ -1069,18 +1069,17 @@ button,
 }
 
 @media (max-width: 1279px) {
-  .wrapper--centred {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay-tablet.svg") no-repeat center/cover;
-    background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay-tablet.svg") no-repeat center/cover;
-    background-attachment: fixed;
-  }
-
   .container {
     max-width: 700px;
   }
 
   .main-header {
     padding-top: 15px;
+  }
+
+  .rooms::before {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay-tablet.svg") no-repeat center/cover;
+    background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay-tablet.svg") no-repeat center/cover;
   }
 
   .rooms__list {
@@ -1143,12 +1142,6 @@ button,
 }
 
 @media (max-width: 767px) {
-  .wrapper--centred {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay-mobile.svg") no-repeat center/cover;
-    background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay-mobile.svg") no-repeat center/cover;
-    background-attachment: fixed;
-  }
-
   .container {
     max-width: 288px;
   }
@@ -1160,6 +1153,11 @@ button,
 
   .main-header__wrapper h1 {
     font-size: 24px;
+  }
+
+  .rooms::before {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(222, 237, 255, 0.6)), to(rgba(166, 204, 250, 0.5))), url("../img/svg/background-overlay-mobile.svg") no-repeat center/cover;
+    background: linear-gradient(180deg, rgba(222, 237, 255, 0.6) 0%, rgba(166, 204, 250, 0.5) 100%), url("../img/svg/background-overlay-mobile.svg") no-repeat center/cover;
   }
 
   .rooms__list {
