--- a/source/sass/blocks/motivation.scss
+++ b/source/sass/blocks/motivation.scss
@@ -12,13 +12,19 @@
     pointer-events: all;
   }
 
-  .motivation__text {
-    @include font-values(700, 14px, 1.5, $color-default-white);
-    background-color: $color-coral;
-    display: flex;
-    align-items: center;
-    padding-left: 17px;
-    padding-right: 4px;
-    border-radius: 3px 0 0 3px;
+  img {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 100%;
   }
+}
+
+.motivation__text {
+  @include font-values(700, 14px, 1.5, $color-default-white);
+  background-color: $color-coral;
+  display: flex;
+  align-items: center;
+  padding: 4px 4px 5px 17px;
+  border-radius: 3px 0 0 3px;
 }
