--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -4,8 +4,6 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  /* stylelint-disable-next-line */
-  min-height: calc(100 * var(--vh, 1vh));
 
   .header,
   .footer {
@@ -19,6 +17,25 @@
   // my custom for project rooms and prices
   &--centred {
     justify-content: center;
+
+    &::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: $color-linear-gradient, url("../img/svg/background-overlay.svg") no-repeat 53.5% 50% / cover;
+      z-index: -1;
+
+      @include vp-1279 {
+        background: $color-linear-gradient, url("../img/svg/background-overlay-tablet.svg") no-repeat center / cover;
+      }
+
+      @include vp-767 {
+        background: $color-linear-gradient, url("../img/svg/background-overlay-mobile.svg") no-repeat center / cover;
+      }
+    }
 
     main {
       flex-grow: 0;
