--- a/source/sass/blocks/room.scss
+++ b/source/sass/blocks/room.scss
@@ -89,6 +89,7 @@
   flex-direction: column;
   justify-content: end;
 
+  padding-top: 35px;
   padding-bottom: 20px;
   border-bottom: 1px solid rgb($color-default-white, 20%);
   overflow-y: auto;
