--- a/css/style.css
+++ b/css/style.css
@@ -1175,6 +1175,7 @@ button,
   align-self: end;
   -ms-grid-column-align: end;
   justify-self: end;
+  max-width: 100%;
   margin-bottom: 2px;
   display: inline-block;
   overflow-wrap: break-word;
@@ -1355,6 +1356,10 @@ button,
     margin-bottom: 0;
     margin-top: 16px;
   }
+
+  .room__info-wrapper {
+    bottom: -24px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1427,6 +1432,12 @@ button,
     font-size: 14px;
     padding-top: 8px;
     margin-top: 20px;
+  }
+
+  .room__info-wrapper {
+    bottom: -21px;
+    left: -21px;
+    right: -21px;
   }
 }
 
