--- a/source/sass/blocks/room.scss
+++ b/source/sass/blocks/room.scss
@@ -208,9 +208,9 @@
 .room__price-wrapper {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 5px;
   align-items: baseline;
   line-height: 1.3;
+  max-width: 100%;
 
   @include vp-1279 {
     grid-area: 2 / 1 / 3 / -1;
@@ -223,6 +223,7 @@
 
 .room__price {
   @include font-values(700, 24px, 1.3, $color-wild-watermelon);
+  word-break: break-word;
 
   @include vp-767 {
     font-size: 20px;
@@ -277,9 +278,9 @@
   background-color: $color-vulcan;
   padding: 12px 24px;
   margin: 0;
+  z-index: 10;
 
   position: absolute;
-  top: -1px;
   bottom: -22px;
   left: -24px;
   right: -24px;
