--- a/css/style.css
+++ b/css/style.css
@@ -1141,13 +1141,11 @@ button,
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-column-gap: 5px;
-  -moz-column-gap: 5px;
-  column-gap: 5px;
   -webkit-box-align: baseline;
   -ms-flex-align: baseline;
   align-items: baseline;
   line-height: 1.3;
+  max-width: 100%;
 }
 
 .room__price {
@@ -1155,6 +1153,7 @@ button,
   font-size: 24px;
   line-height: 1.3;
   color: #ff4b77;
+  word-break: break-word;
 }
 
 .room__sign {
@@ -1205,8 +1204,8 @@ button,
   background-color: #3c3e43;
   padding: 12px 24px;
   margin: 0;
+  z-index: 10;
   position: absolute;
-  top: -1px;
   bottom: -22px;
   left: -24px;
   right: -24px;
